Fixed numerous warnings reported by FindBugs
git-svn-id: https://jaitools.googlecode.com/svn/trunk@1817 07dc4d45-bd82-665a-fa80-c0abab6b2a50